<resources>
    <string name="app_name">GymWorkout</string>
    <string name="btn_next">Tiếp theo</string>
    <string name="btn_finish">Hoàn thành</string>
    <!-- Cài đặt -->
    <string name="title_setting">Cài đặt</string>
    <string name="personal_information">Thông tin cá nhân</string>
    <string name="notification_options">Tùy chọn thông báo</string>
    <string name="exercise_progress">Tiến độ tập luyện</string>
    <string name="name">Tên</string>
    <string name="age">Tuổi</string>
    <string name="height">Chiều cao</string>
    <string name="weight">Cân nặng</string>
    <string name="gender">Giới tính</string>
    <string name="target_weight">Cân nặng mong muốn</string>
    <string name="goal">Mục tiêu</string>
    <string name="title_workout_progress">Tiến độ tập luyện</string>
    <string name="detail">Chi tiết</string>
    <string name="marco_setting">Cập nhật marco dinh dưỡng</string>
    <string name="marco_title">Thành phần dinh dưỡng</string>
    <string name="tv_protein">Chất đạm</string>
    <string name="tv_fat">Chất béo</string>
    <string name="logout">Đăng xuất</string>
    <!-- Bài tập -->
    <string name="btn_close">Đóng</string>
    <string name="title_exercises">Bài tập</string>
    <string name="focus_area">Tập trung vào</string>
    <string name="equipment">Thiết bị</string>
    <string name="btn_done">Hoàn tất</string>
    <string name="instructions">Hướng dẫn</string>
    <string name="search_hint">Tìm kiếm Bài tập</string>
    <string name="filter_title">Tất cả bài tập</string>
    <string name="btn_delete_filter">Được lọc</string>
    <string name="btn_save">Lưu lại</string>
    <string name="Filtered">Đã lọc</string>
    <string name="btnClear">Bỏ lọc</string>
    <!-- Hồ sơ -->
    <string name="gender_title">"Giới tính của bạn là gì?"</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="goal_title">"Mục tiêu của bạn là gì?"</string>
    <string name="goal_title1">Tăng cơ bắp</string>
    <string name="goal_description1">Tập trung vào việc tăng khối lượng và kích thước cơ bắp</string>
    <string name="goal_title2">Sức bền</string>
    <string name="goal_description2">Tập trung vào tăng sức bền cơ bắp và cải thiện sức kháng</string>
    <string name="goal_title3">Sức mạnh tối đa</string>
    <string name="goal_description3">Tập trung vào việc xây dựng sức mạnh và sức mạnh nổ</string>
    <string name="goal_title4">Cải thiện vóc dáng</string>
    <string name="goal_description4">Tập trung vào việc điều chỉnh vóc dáng và đốt mỡ</string>
    <string name="name_title">"Tên của bạn là gì?"</string>
    <string name="age_title">Bạn bao nhiêu tuổi?</string>
    <string name="height_title">"Chiều cao của bạn là bao nhiêu?"</string>
    <string name="curr_weight_title">"Cân nặng hiện tại của bạn là bao nhiêu?"</string>
    <string name="target_weight_title">"Mục tiêu cân nặng của bạn là bao nhiêu?"</string>
    <string name="bmi_title">Chỉ số BMI của bạn</string>
    <string name="bmi_explain">Chỉ số khối lượng cơ thể (BMI) là một chỉ số đo lường lượng mỡ trong cơ thể dựa trên chiều cao và cân nặng. Nó giúp bạn đánh giá nguy cơ liên quan đến vấn đề sức khỏe liên quan đến cân nặng.</string>
    <string name="often_do_exercise">Tần suất tập luyện của bạn?</string>
    <string name="title_training">Huấn luyện</string>
    <string name="btn_start">Bắt đầu</string>
    <string name="btn_logNextSet">Ghi chú Bộ tiếp theo</string>
    <string name="title_login">Thiết lập tài khoản</string>
    <string name="continue_with_your_existing_account">Tiếp tục với tài khoản của bạn</string>
    <string name="max_length">Tối đa 15 kí tự</string>
    <string name="warning_account">Vui lòng kiểm tra lại tài khoản và mật khẩu của bạn</string>
    <string name="sign_success">Đăng ký thành công</string>
    <string name="sign_failed">Đăng ký thất bại</string>
    <!-- Tùy chỉnh -->
    <string name="title_custom">Tùy chỉnh</string>
    <string name="description_custom_1">Tạo bài tập tùy chỉnh đầu tiên của bạn</string>
    <string name="description_custom_2">Thiết lập kế hoạch riêng của bạn</string>
    <string name="add_exercise">Thêm bài tập</string>
    <string name="add_a_set">Thêm 1 hiệp</string>
    <string name="btn_new">Mới</string>
    <string name="edit_text_name">Nhập tên buổi tập</string>
    <string name="title_close_dialog">Hủy những thay đổi chưa được lưu của bạn?</string>
    <string name="delete">Xóa bài tập</string>
    <string name="replace">Thay thế</string>
    <string name="toast_replace_warning">Bài tập mới không thể trùng với bài tập cũ.</string>
    <string name="btn_edit">Chỉnh sửa</string>
    <string name="btn_rename">Đổi tên</string>
    <string name="delete_custom_training">Xóa</string>
    <!-- Thực phẩm -->
    <string name="title_food">Thực phẩm</string>
    <string name="title_calories">Lượng calo</string>
    <string name="remaining">Còn lại</string>
    <string name="base_goal">Mục tiêu cơ bản</string>
    <string name="title_eaten">Đã ăn</string>
    <string name="breakfast">Bữa sáng</string>
    <string name="lunch">Bữa trưa</string>
    <string name="dinner">Bữa tối</string>
    <string name="snacks">Món ăn nhẹ</string>
    <string name="add_food">Thêm thực phẩm</string>
    <string name="search">Tìm kiếm</string>
    <!-- Tập luyện -->
    <string name="finish_title">Kết thúc ?</string>
    <string name="finish_description">Chỉ nhưng bài tập hoàn thành mới được ghi lại trong lịch sử của bạn</string>
    <string name="completed_sets">Số sets hoàn thành</string>
    <string name="inCompleted_sets">Số sets chưa hoàn thành</string>
    <string name="btn_Cancel">Hủy</string>
    <string name="title_finish">Bạn đã hoàn thành buổi tập của mình!</string>
    <string name="title_volume">Khối lượng</string>
    <string name="title_duration">Thời lượng</string>
    <string name="view_all">Xem tất cả</string>
    <!-- Đăng nhập -->
    <string name="login">Đăng nhập tài khoản của bạn</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="is_empty">Không được để tài khoản hoặc mật khẩu để trống</string>

</resources>
