<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_title"
                android:textSize="23sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:visibility="visible"
                />
            <TextView
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Filtered"
                android:textSize="23sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:drawableRight="@drawable/baseline_delete_24"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/btnDeleteFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_delete_filter"
                android:textSize="23sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/numberEx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="23sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/theme_color"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@id/ex_text"
                android:layout_marginEnd="8dp"/>
            <TextView
                android:id="@+id/ex_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="bài tập"
                android:textSize="23sp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/forceArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/focus_area"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_focusArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/forceArea"
            android:layout_marginHorizontal="16dp"
            />
        <TextView
            android:id="@+id/equipmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/rcv_focusArea"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_equitment"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintTop_toBottomOf="@id/equipmentTitle"
            android:layout_marginBottom="16dp"/>
            <TextView
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:textAllCaps="true"
                android:textSize="19sp"
                android:padding="10dp"
                android:gravity="center"
                android:background="@drawable/bg_btn_radios"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat_bold"
                app:layout_constraintBottom_toTopOf="@id/btnCancel"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="16dp"
                />
        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_Cancel"
            android:textAllCaps="true"
            android:textSize="19sp"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/bg_btn_radios"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="16dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>