<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="29sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/male"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:src="@drawable/img_selected_male"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="56dp"
           app:layout_constraintBottom_toTopOf="@id/bottom"
            android:clickable="true"
            android:focusable="true"
            />
        <TextView
            android:id="@+id/male_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            app:layout_constraintTop_toBottomOf="@id/male"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/male"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/female"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:src="@drawable/img_selected_female"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom"
            android:clickable="true"
            android:focusable="true"
            />
        <TextView
            android:id="@+id/female_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            app:layout_constraintTop_toBottomOf="@id/female"
            app:layout_constraintStart_toStartOf="@id/female"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:textColor="@color/black"/>
        <View
            android:id="@id/bottom"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp" />
        <FrameLayout
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_radios"
            app:layout_constraintBottom_toTopOf="@id/exitsing_acc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp"
            android:paddingVertical="10dp">
            <TextView
                android:id="@+id/tvNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_next"
                android:textAllCaps="true"
                android:textSize="19sp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat_bold"
                />
        </FrameLayout>
        <TextView
            android:id="@+id/exitsing_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_your_existing_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:drawableEnd="@drawable/ic_arrow_next_setting_item"
            android:drawableTint="@color/black"
            android:layout_marginBottom="16dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>