<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout_training_radios"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginHorizontal="8dp">

        <TextView
            android:id="@+id/finish_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/finish_title"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/finish_description"
            app:layout_constraintTop_toBottomOf="@id/finish_title"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/number_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="8"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/number_inComplete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:gravity="center"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/number_inComplete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="12"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/number_complete"
            android:gravity="center"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/text_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/completed_sets"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/number_inComplete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number_complete"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"/>
        <TextView
            android:id="@+id/text_inComplete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/inCompleted_sets"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/number_inComplete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/number_complete"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"/>
        <FrameLayout
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_btn_radios"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/text_complete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/btn_finish"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="19sp" />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/btn_cancer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_border_btn"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/btn_finish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tvCancer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/btn_close"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="19sp" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>