<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color">
    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_ios_24_black"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:tint="@color/white"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_information"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/white"/>
        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg_item_setting"
            android:padding="20dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/title_name"/>
    <TextView
        android:id="@+id/title_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>
    <Spinner
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_item_setting"
        android:padding="20dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_gender"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/title_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toEndOf="@id/title_gender"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_item_setting"
        android:padding="20dp"
        android:text="@string/height"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/title_height"
        app:layout_constraintStart_toStartOf="@id/title_height"/>
    <TextView
        android:id="@+id/title_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/gender"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_item_setting"
        android:padding="20dp"
        android:text="@string/weight"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/title_weight"
        app:layout_constraintStart_toStartOf="@id/title_weight"/>
    <TextView
        android:id="@+id/title_targetWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_weight"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/height"
        app:layout_constraintStart_toStartOf="@id/height"

        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/TargetWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_item_setting"
        android:padding="20dp"
        android:text="@string/weight"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/title_targetWeight"
        app:layout_constraintStart_toStartOf="@id/title_targetWeight"/>

    <TextView
        android:id="@+id/title_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/weight"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>
    <Spinner
        android:id="@+id/goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_item_setting"
        android:padding="20dp"
        android:text="@string/goal"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_goal"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>