<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_border_edit_text">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_border_search"
        android:backgroundTint="#F2F2F2"
        android:layout_marginHorizontal="16dp">
        <EditText
            android:id="@+id/search_edt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/edit_text_name"
            android:maxLength="30"
            android:textColor="#252932"
            android:textColorHint="#8B93A7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/countLength"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/countLength"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0/30"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/btn_Cancel"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutEditText"
        android:layout_marginBottom="8dp"/>
    <View
        android:id="@+id/line"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/btnCancel"
        app:layout_constraintBottom_toBottomOf="@id/btnCancel"
        android:background="@color/ltGray"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintEnd_toStartOf="@id/btnSave"
        android:layout_marginVertical="8dp"
        />

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/btn_save"
        android:textColor="@color/theme_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/layoutEditText"
        android:layout_marginBottom="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>